codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_auto_resolution_countdown.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot_at(&overlay, Rect::new(0, 0, 120, 16), now)"
---
                                                                                                                        
  问 题  1/3（ 3 个 未 回 答 ）  · 将 在  1m 00s 后 自 动 处 理                                                                        
  Choose an option.                                                                                                     
                                                                                                                        
  › 1. Option 1  First choice.                                                                                          
    2. Option 2  Second choice.                                                                                         
    3. Option 3  Third choice.                                                                                          
                                                                                                                        
  tab 添 加 备 注  | enter 提 交 回 答  | ←/→ 切 换 问 题  | esc 中 断
