codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_hidden_options_footer.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                
  问 题  1/1（ 1 个 未 回 答 ）                                                         
  What would you like to do next?                                               
                                                                                
    2. Run tests      Pick a crate and run its tests.                           
    3. Review a diff  Summarize or review current changes.                      
  › 4. Refactor       Tighten structure and remove dead code.                   
                                                                                
  option 4/5 | tab 添 加 备 注  | enter 提 交 回 答  | esc 中 断
